--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ before_script:
   - python3 -m venv test_env
   - source test_env/bin/activate
   - pip install --no-cache-dir -i https://nexus.meteoswiss.ch/repository/python-all/simple -r requirements.txt
+  - pip install -e .
 
 stages:
   - test
