--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,14 @@ versionfile_build = opendap_protocol/_version.py
 tag_prefix =
 parentdir_prefix =
 
+[bdist_wheel]
+universal = 1
+
+[flake8]
+exclude = doc
+
+[tool:pytest]
+collect_ignore = ['setup.py']
+
+[aliases]
+test = pytest
