--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - pip install codecov
   - pip install pytest-cov
 script:
-  - pytest run --cov=opendap_protocol --cov-report term
+  - pytest --cov=opendap_protocol --cov-report term
 after_success:
   - codecov
